fix: missing margin top for subtitle/naame

--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -72,6 +72,7 @@
 
 .subtitle {
   color: var(--primary-500);
+  margin-top: 1rem;
 }
 
 .level {
